PluggableAuthService changelog

  PluggableAuthService 1.5 (unreleased)

    Features Added

      - Added support for registering plugin types via ZCML.

      - Implemented authentication caching in _extractUserIds.

      - Ported standard user folder tests from the AccessControl test suite.

    Bugs Fixed

      - Made the CookieAuthHelper only use the '__ac_name' field if
        '__ac_password' is also present. This fixes a login problem for
        CMF sites where the login name was remembered between sessions with
        an '__ac_name' cookie.

      - Made the DomainAuthHelper return the remote address, even it the
        remote host is not available (http://www.zope.org/Collectors/PAS/49).

      - Fixed bug in DelegatingMultiPlugin which attempted to validate the
        supplied password directly against the user password - updated to use
        AuthEncoding.pw_validate to handle encoding issues

      - Fixed serious security hole in DelegatingMultiPlugin which allowed
        Authentication if the EmergencyUser login was passed in.  Added
        password validation utilizing AuthEncoding.pw_validate

      - Fixed a set of tests that tested values computed from dictionaries 
        and could break since dictionaries are not guaranteed to have any 
        sort order.

      - Fixed test breakage induced by use of Z3 pagetemplates in Zope
        2.10+.

      - BasePlugin: The listInterfaces method only considered the old-style
        __implements__ machinery when determining interfaces provided by
        a plugin instance.

      - ZODBUserManager: Already encrypted passwords were encrypted again in
        addUser and updateUserPassword.
        (http://www.zope.org/Collectors/Zope/1926)

      - Made sure the emergency user via HTTP basic auth always wins, no matter
        how borken the plugin landscape.

    Other

      - cleaned up code in CookieAuthHelper which allowed the form to override